--- a/public/assets/css/clients/home-client.css
+++ b/public/assets/css/clients/home-client.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css');
 * {
     margin: 0;
     padding: 0;
@@ -1194,8 +1196,7 @@ footer .copyright {
 
 .model {
     width: 600px;
-    margin-left: 30%;
-    /* transform: translateX(-50%); */
+    /* margin-left: 30%; */
     background-color: #fff;
     padding: 50px 100px;
 }
