style: update css login form

--- a/public/assets/css/clients/login.css
+++ b/public/assets/css/clients/login.css
@@ -1,7 +1,7 @@
-.forget_pass {
+/* .forget_pass {
     position: absolute;
-    top: 320px;
-}
+    top: 390px;
+} */
 .model {
     position: absolute;
     top: 50%;
