--- a/public/assets/css/admin/dashboard.css
+++ b/public/assets/css/admin/dashboard.css
@@ -1,428 +1,459 @@
-@import url('https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css');
-@import url('https://use.fontawesome.com/releases/v5.15.3/css/all.css');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500&display=swap');
+/* ===== Google Font Import - Poppins ===== */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css');
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
 
 :root{
-    --main-color: #11101d;
-    --color-dark: #1D2231;
-    --text-grey:  #8390A2;
+    /* ===== Colors ===== */
+    --primary-color: #0E4BF1;
+    --panel-color: #FFF;
+    --text-color: #000;
+    --black-light-color: #707070;
+    --border-color: #e6e5e5;
+    --toggle-color: #DDD;
+    --box1-color: #4DA3FF;
+    --box2-color: #FFE6AC;
+    --box3-color: #E7D1FC;
+    --title-icon-color: #fff;
+
+    /* ====== Transition ====== */
+    --tran-05: all 0.5s ease;
+    --tran-03: all 0.3s ease;
+    --tran-03: all 0.2s ease;
 }
 
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    list-style: none;
-    text-decoration: none;
-    font-family: 'Poppins' ,sans-serif;
+body{
+    min-height: 100vh;
+    background-color: var(--primary-color);
 }
-a {
-    text-decoration: none;
+body.dark{
+    --primary-color: #3A3B3C;
+    --panel-color: #242526;
+    --text-color: #CCC;
+    --black-light-color: #CCC;
+    --border-color: #4D4C4C;
+    --toggle-color: #FFF;
+    --box1-color: #3A3B3C;
+    --box2-color: #3A3B3C;
+    --box3-color: #3A3B3C;
+    --title-icon-color: #CCC;
 }
-.sidebar{
-    width: 345px;
+/* === Custom Scroll Bar CSS === */
+::-webkit-scrollbar {
+    width: 8px;
+}
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+::-webkit-scrollbar-thumb {
+    background: var(--primary-color);
+    border-radius: 12px;
+    transition: all 0.3s ease;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #0b3cc1;
+}
+
+body.dark::-webkit-scrollbar-thumb:hover,
+body.dark .activity-data::-webkit-scrollbar-thumb:hover{
+    background: #3A3B3C;
+}
+
+nav{
     position: fixed;
-    left: 0;
     top: 0;
+    left: 0;
     height: 100%;
-    z-index: 100;
-    background: var(--main-color);
-    transition: width 300ms;
-
+    width: 250px;
+    padding: 10px 14px;
+    background-color: var(--panel-color);
+    border-right: 1px solid var(--border-color);
+    transition: var(--tran-05);
 }
-.sidebar-brand{
-    height: 90px;
-    padding: 1rem 0rem 1rem 2rem;
-    color: #fff;
+nav.close{
+    width: 73px;
 }
-.sidebar-brand span{
-    display: inline-block;
-    padding-right: 1rem;
-}
-.sidebar-menu li{
-    width: 100%;
-    margin-bottom: 1.7rem;
-    padding-left: 1rem;
-
-}
-.sidebar-menu{
-    margin-top: 1rem;
-}
-.sidebar-menu a{
-    padding-left: 2rem;
-    display: block;
-    color: #fff;
-    font-size: 1.1rem;
-}
-#nav-toggle:checked + .sidebar {
-    width: 70px ;
-
-}
-#nav-toggle:checked + .sidebar .sidebar-brand,
-#nav-toggle:checked + .sidebar li
-{
-    padding-left: 1rem;
-    text-align: center;
-}
-#nav-toggle:checked + .sidebar li a
-{
-    padding-left: 0rem;
-}
-#nav-toggle:checked + .sidebar .sidebar-brand h1 span:last-child,
-#nav-toggle:checked + .sidebar li a span:last-child{
-    display: none;
-
-}
-.sidebar-menu a span:first-child{
-    font-size: 1.5rem;
-    padding-right: 1rem;
-}
-.sidebar-menu a.active{
-    background: #fff;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    color: var(--main-color);
-    border-radius: 30px 0px 0px 30px;
-
-}
-#nav-toggle:checked ~ .main-content {
-    margin-left: 70px;
-
-}
-#nav-toggle:checked ~ .main-content  header{
-    width: calc(100% - 70px);
-    left:70px;
-
-}
-.main-content{
-    transition: margin-left 300ms;
-    margin-left: 345px;
-}
-header{
-    background: #fff;
-    display: flex;
-    justify-content: space-between;
-    padding: 1rem 1.5rem;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
-    position: fixed;
-    left: 345px;
-    top:0;
-    z-index: 100;
-    width: calc(100% - 345px);
-    transition: left 300ms;
-}
-
-#nav-toggle{
-    display: none;
-}
-header h2{
-    color: #222;
-}
-header label span{
-    font-size: 1.7rem;
-    padding-right: 1rem;
-}
-.search-wrapper {
-    border: solid 1px #ccc;
-    border-radius: 30px;
-    height: 50px;
-    display: flex;
-    align-items: center;
-    overflow-x: hidden;
-}
-.search-wrapper span{
-    display: inline-block;
-    padding: 0rem 1rem;
-    font-size: 1.5rem;
-}
-.search-wrapper input{
-    height: 100%;
-    padding: .5rem;
-    border: none;
-    outline: none;
-
-}
-.user-wrapper{
+nav .logo-name{
     display: flex;
     align-items: center;
 }
-.user-wrapper img{
+nav .logo-image{
+    display: flex;
+    justify-content: center;
+    min-width: 45px;
+}
+nav .logo-image img{
+    width: 40px;
+    object-fit: cover;
     border-radius: 50%;
-    margin-right: .5rem;
 }
 
-.user-wrapper small{
-    display: inline-block;
-    color: var(--text-grey);
-    margin-top: -1px !important;
-
-}
-main{
-    margin-top: 85px;
-    padding: 2rem 1.5rem;
-    background: #f1f5f9;
-    min-height: calc(100vh - 90px);
-}
-.cards{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 2rem;
-    margin-top: 1rem;
-
-
-
-}
-.card-single{
-    display: flex;
-    justify-content: space-between;
-    background: #fff;
-    padding: 2rem;
-    border-radius: 12px;
-    box-shadow: 0 5px 10px rgba(154,160,185,.05), 0 15px 40px rgba(166,173,201,.2);
-}
-.card-single div:last-child span{
-    color: var(--main-color);
-    font-size: 3rem;
-
-}
-.card-single div:first-child span{
-    color: var(--text-grey);
-
-
-}
-.card-single:last-child{
-    background: var(--main-color);
-}
-.card-single:last-child h1,
-.card-single:last-child div:first-child span,
-.card-single:last-child div:last-child span
-{
-    color: #fff;
-}
-
-.recent-grid{
-    margin-top: 3.5rem;
-    display: grid;
-    grid-gap: 2rem;
-    grid-template-columns: 65% auto;
-
-}
-.card{
-    background: #fff;
-    border-radius: 12px;
-    box-shadow: 0 5px 10px rgba(154,160,185,.05), 0 15px 40px rgba(166,173,201,.2);
-    padding: 1rem;
-}
-.card-header
-{
-    padding: 1rem;
-}
-.card-header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom: 1px solid #f0f0f0;
-}
-.card-header button{
-    background: var(--main-color);
-    border-radius: 10px;
-    color: #fff;
-    font-size: .8rem;
-    padding: .5rem 1rem;
-    border:1px solid var(--main-color);
-}
-table{
-    border-collapse: collapse;
-}
-thead tr{
-    border-top: 1px solid #f0f0f0;
-    border-bottom:2px solid #f0f0f0;
-
-}
-thead td{
-    font-weight: 700;
-}
-td{
-    padding: .5rem 1rem ;
-    font-size: .9rem ;
-    color: #222;
-
-}
-
-tr td:last-child{
-    display: flex;
-    align-items: center;
-
-
-}
-td .status{
-    display: inline-block;
-    height: 10px;
-    width: 10px;
-    border-radius: 50%;
-    margin-right: 1rem;
-}
-.status.purple {
-    background: rebeccapurple;
-}
-.status.pink{
-    background: deeppink;
-}
-.status.orange{
-    background: orangered;
-}
-.table-responsive{
-    width: 100%;
-    overflow-x: auto;
-}
-.customer{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: .5rem .7rem;
-}
-.info{
-    display: flex;
-    align-items: center;
-}
-.info img{
-    border-radius: 50%;
-    margin-right: 1rem;
-}
-.info h4{
-    font-size: .8rem;
-    font-weight: 700;
-    color: #222;
-}
-.info small{
+nav .logo-name .logo_name{
+    font-size: 22px;
     font-weight: 600;
-    color: var(--text-grey);
+    color: var(--text-color);
+    margin-left: 14px;
+    transition: var(--tran-05);
 }
-.contact span{
-    font-size: 1.2rem;
+nav.close .logo_name{
+    opacity: 0;
+    pointer-events: none;
+}
+nav .menu-items{
+    margin-top: 40px;
+    height: calc(100% - 90px);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.menu-items li{
+    list-style: none;
+}
+.menu-items li a{
+    display: flex;
+    align-items: center;
+    height: 50px;
+    text-decoration: none;
+    position: relative;
+}
+.nav-links li a:hover:before{
+    content: "";
+    position: absolute;
+    left: -7px;
+    height: 5px;
+    width: 5px;
+    border-radius: 50%;
+    background-color: var(--primary-color);
+}
+body.dark li a:hover:before{
+    background-color: var(--text-color);
+}
+.menu-items li a i{
+    font-size: 24px;
+    min-width: 45px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--black-light-color);
+}
+.menu-items li a .link-name{
+    font-size: 18px;
+    font-weight: 400;
+    color: var(--black-light-color);
+    transition: var(--tran-05);
+}
+nav.close li a .link-name{
+    opacity: 0;
+    pointer-events: none;
+}
+.nav-links li a:hover i,
+.nav-links li a:hover .link-name{
+    color: var(--primary-color);
+}
+body.dark .nav-links li a:hover i,
+body.dark .nav-links li a:hover .link-name{
+    color: var(--text-color);
+}
+.menu-items .logout-mode{
+    padding-top: 10px;
+    border-top: 1px solid var(--border-color);
+}
+.menu-items .mode{
+    display: flex;
+    align-items: center;
+    white-space: nowrap;
+}
+.menu-items .mode-toggle{
+    position: absolute;
+    right: 14px;
+    height: 50px;
+    min-width: 45px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+.mode-toggle .switch{
+    position: relative;
     display: inline-block;
-    margin-left: .5rem;
-    color:  var(--main-color);
-
+    height: 22px;
+    width: 40px;
+    border-radius: 25px;
+    background-color: var(--toggle-color);
+}
+.switch:before{
+    content: "";
+    position: absolute;
+    left: 5px;
+    top: 50%;
+    transform: translateY(-50%);
+    height: 15px;
+    width: 15px;
+    background-color: var(--panel-color);
+    border-radius: 50%;
+    transition: var(--tran-03);
+}
+body.dark .switch:before{
+    left: 20px;
 }
 
-@media only screen and (max-width: 1200px){
+.dashboard{
+    position: relative;
+    left: 250px;
+    background-color: var(--panel-color);
+    min-height: 100vh;
+    width: calc(100% - 250px);
+    padding: 10px 14px;
+    transition: var(--tran-05);
+}
+nav.close ~ .dashboard{
+    left: 73px;
+    width: calc(100% - 73px);
+}
+.dashboard .top{
+    position: fixed;
+    top: 0;
+    left: 250px;
+    display: flex;
+    width: calc(100% - 250px);
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 14px;
+    background-color: var(--panel-color);
+    transition: var(--tran-05);
+    z-index: 10;
+}
+nav.close ~ .dashboard .top{
+    left: 73px;
+    width: calc(100% - 73px);
+}
+.dashboard .top .sidebar-toggle{
+    font-size: 26px;
+    color: var(--text-color);
+    cursor: pointer;
+}
+.dashboard .top .search-box{
+    position: relative;
+    height: 45px;
+    max-width: 600px;
+    width: 100%;
+    margin: 0 30px;
+}
+.top .search-box input{
+    position: absolute;
+    border: 1px solid var(--border-color);
+    background-color: var(--panel-color);
+    padding: 0 25px 0 50px;
+    border-radius: 5px;
+    height: 100%;
+    width: 100%;
+    color: var(--text-color);
+    font-size: 15px;
+    font-weight: 400;
+    outline: none;
+}
+.top .search-box i{
+    position: absolute;
+    left: 15px;
+    font-size: 22px;
+    z-index: 10;
+    top: 50%;
+    transform: translateY(-50%);
+    color: var(--black-light-color);
+}
+.top img{
+    width: 40px;
+    border-radius: 50%;
+}
+.dashboard .dash-content{
+    padding-top: 50px;
+}
+.dash-content .title{
+    display: flex;
+    align-items: center;
+    margin: 60px 0 30px 0;
+}
+.dash-content .title i{
+    position: relative;
+    height: 35px;
+    width: 35px;
+    background-color: var(--primary-color);
+    border-radius: 6px;
+    color: var(--title-icon-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+}
+.dash-content .title .text{
+    font-size: 24px;
+    font-weight: 500;
+    color: var(--text-color);
+    margin-left: 10px;
+}
+.dash-content .boxes{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.dash-content .boxes .box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 12px;
+    width: calc(100% / 3 - 15px);
+    padding: 15px 20px;
+    background-color: var(--box1-color);
+    transition: var(--tran-05);
+}
+.boxes .box i{
+    font-size: 35px;
+    color: var(--text-color);
+}
+.boxes .box .text{
+    white-space: nowrap;
+    font-size: 18px;
+    font-weight: 500;
+    color: var(--text-color);
+}
+.boxes .box .number{
+    font-size: 40px;
+    font-weight: 500;
+    color: var(--text-color);
+}
+.boxes .box.box2{
+    background-color: var(--box2-color);
+}
+.boxes .box.box3{
+    background-color: var(--box3-color);
+}
+.dash-content .activity .activity-data{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+.activity .activity-data{
+    display: flex;
+}
+.activity-data .data{
+    display: flex;
+    flex-direction: column;
+    margin: 0 15px;
+}
+.activity-data .data-title{
+    font-size: 20px;
+    font-weight: 500;
+    color: var(--text-color);
+}
+.activity-data .data .data-list{
+    font-size: 18px;
+    font-weight: 400;
+    margin-top: 20px;
+    white-space: nowrap;
+    color: var(--text-color);
+}
 
-    .sidebar{
-        width: 70px ;
+@media (max-width: 1000px) {
+    nav{
+        width: 73px;
     }
-    .sidebar .sidebar-brand,
-    .sidebar li
-    {
-        padding-left: 1rem;
-        text-align: center;
+    nav.close{
+        width: 250px;
     }
-    #nav-toggle:checked + .sidebar li a
-    {
-        padding-left: 0rem;
+    nav .logo_name{
+        opacity: 0;
+        pointer-events: none;
     }
-    .sidebar .sidebar-brand h1 span:last-child,
-    .sidebar li a span:last-child{
-        display: none;
-
+    nav.close .logo_name{
+        opacity: 1;
+        pointer-events: auto;
     }
-
-    .main-content {
-        margin-left: 70px;
-
+    nav li a .link-name{
+        opacity: 0;
+        pointer-events: none;
     }
-    .main-content  header{
-        width: calc(100% - 70px);
-        left:70px;
-
+    nav.close li a .link-name{
+        opacity: 1;
+        pointer-events: auto;
+    }
+    nav ~ .dashboard{
+        left: 73px;
+        width: calc(100% - 73px);
+    }
+    nav.close ~ .dashboard{
+        left: 250px;
+        width: calc(100% - 250px);
+    }
+    nav ~ .dashboard .top{
+        left: 73px;
+        width: calc(100% - 73px);
+    }
+    nav.close ~ .dashboard .top{
+        left: 250px;
+        width: calc(100% - 250px);
+    }
+    .activity .activity-data{
+        overflow-X: scroll;
     }
 }
 
-@media only screen and (max-width: 960px){
-    .cards{
-        grid-template-columns: repeat(3, 1fr);
-    }
-    .recent-grid{
-        grid-template-columns: 60% 40%;
+@media (max-width: 780px) {
+    .dash-content .boxes .box{
+        width: calc(100% / 2 - 15px);
+        margin-top: 15px;
     }
 }
-
-@media only screen and (max-width: 768px){
-    .cards{
-        grid-template-columns: repeat(2, 1fr);
+@media (max-width: 560px) {
+    .dash-content .boxes .box{
+        width: 100% ;
     }
-    .recent-grid{
-        grid-template-columns: 100%;
+}
+@media (max-width: 400px) {
+    nav{
+        width: 0px;
     }
-    .search-wrapper{
-        display: none;
+    nav.close{
+        width: 73px;
     }
-    .sidebar {
-
-        left: -100% !important;
+    nav .logo_name{
+        opacity: 0;
+        pointer-events: none;
     }
-    header h2{
-        display: flex;
-        align-items: center;
+    nav.close .logo_name{
+        opacity: 0;
+        pointer-events: none;
     }
-    header h2 label{
-        display: inline-block;
-        text-align: center;
-        background: var(--main-color);
-        padding-right: 0rem;
-        margin-right: 1rem;
-        height: 40px;
-        width: 40px;
-        border-radius: 50%;
-        color: #fff;
-        display: flex;
-        align-items: center;
-        justify-content: center !important;
+    nav li a .link-name{
+        opacity: 0;
+        pointer-events: none;
     }
-    header h2 span{
-        text-align: center;
-        padding-right: 0rem;
+    nav.close li a .link-name{
+        opacity: 0;
+        pointer-events: none;
     }
-    header h2{
-        font-size: 1.1rem;
-    }
-    .main-content{
+    nav ~ .dashboard{
+        left: 0;
         width: 100%;
-        margin-left: 0rem;
     }
-    header{
-        width: 100% !important;
-        left: 0 !important;
+    nav.close ~ .dashboard{
+        left: 73px;
+        width: calc(100% - 73px);
     }
-    #nav-toggle:checked + .sidebar{
-        left: 0 !important;
-        z-index: 100;
-        width: 345px;
+    nav ~ .dashboard .top{
+        left: 0;
+        width: 100%;
     }
-
-    #nav-toggle:checked .sidebar .sidebar-brand,
-    #nav-toggle:checked + .sidebar li
-    {
-        padding-left: 2rem;
-        text-align: left;
-    }
-
-    #nav-toggle:checked + .sidebar li a
-    {
-        padding-left: 1rem;
-    }
-    #nav-toggle:checked  + .sidebar .sidebar-brand h1 span:last-child,
-    #nav-toggle:checked + .sidebar li a span:last-child{
-        display: inline;
-
-    }
-    #nav-toggle:checked ~ .main-content{
-        margin-left: 0rem !important;
-    }
-}
-@media only screen and (max-width: 560px){
-    .cards{
-        grid-template-columns: 100%;
+    nav.close ~ .dashboard .top{
+        left: 0;
+        width: 100%;
     }
 }
