--- a/public/assets/css/admin/dashboard.css
+++ b/public/assets/css/admin/dashboard.css
@@ -1,6 +1,7 @@
 /* ===== Google Font Import - Poppins ===== */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css');
+@import url('ck-editor.css');
 *{
     margin: 0;
     padding: 0;
