feat(ui): about page

--- a/public/assets/css/clients/home-client.css
+++ b/public/assets/css/clients/home-client.css
@@ -860,7 +860,7 @@ footer .copyright {
 /* Blog page */
 
 #page-header.blog-header {
-    background-image: url('../../imgs/banner/b19.jpg');
+    background-image: url(../../imgs/banner/b19.jpg);
 }
 
 #blog {
