--- a/public/assets/css/clients/home-client.css
+++ b/public/assets/css/clients/home-client.css
@@ -1095,23 +1095,21 @@ footer .copyright {
 #cart table td:nth-child(1) {
     width: 100px;
     text-align: center;
+    cursor: pointer;
 }
 
 #cart table td:nth-child(2) {
     width: 150px;
-    text-align: center;
 }
 
 #cart table td:nth-child(3) {
     width: 200px;
-    text-align: center;
 }
 
 #cart table td:nth-child(4),
 #cart table td:nth-child(5),
 #cart table td:nth-child(6) {
     width: 150px;
-    text-align: center;
 }
 
 #cart table td:nth-child(5) input {
